--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 TELEGRAM_API_HASH=""
 TELEGRAM_API_ID=""
 TELEGRAM_STRING_SESSION=""
-FIREBASE_PRIVATE_KEY_ID=""
-FIREBASE_PRIVATE_KEY=""
+SUPABASE_URL=""
+SUPABASE_SERVICE_ROLE_KEY=""
+USER_EMAIL=""
+USER_PASSWORD=""
