--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "input": "^1.0.1",
     "telegram": "^2.26.16"
   }
 }
